--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,11 @@
   %></a></div>
 
   <div class="my-account">
-    <%= link_to "MY ACCOUNT", my_account_path %>
+    <p class="comic">
+      <%= link_to "MY ACCOUNT", my_account_path %>
+    </p>
   </div>
-  
+
   <div class="media">
 
     <p>Authenticate</p>
