--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -187,8 +187,6 @@ h3 {
 	border-radius: 50%;
 	width: 5.5em;
 	height: 5.5em;
-	/* width and height can be anything, as long as they're equal */
-
 }
 
 .my-account a {
@@ -196,5 +194,5 @@ h3 {
 }
 
 .comic {
-  margin-top: .75em;
+  margin-top: 1em;
 }
