--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,7 @@
   %></a></div>
 
   <div class="my-account">
-    <p class="comic">
-      <%= link_to "MY ACCOUNT", my_account_path %>
-    </p>
+      <%= link_to image_tag("hideous-account.gif", alt: "My Account image", id: "hideous-my-account"), my_account_path %>
   </div>
 
   <div class="media">
