--- a/app/views/github/search_github.html.erb
+++ b/app/views/github/search_github.html.erb
@@ -8,12 +8,18 @@
   <%= image_tag "#{git[:avatar_url]}", size:"100x100" %>
   <p><%= git[:login] %></p>
   <!-- <button type="button" class="btn btn-info">Subscribe</button> -->
+  <% @idf = Feed.find_by(handle: "#{git[:login]}").id %>
 
-  <%= form_for @feed, url: create_github_feed_path, method: :post, :class => "col-xs-4 subscribe-button" do |f| %>
-  <%= f.hidden_field :handle, :value => "#{git[:login]}"%>
-  <%= f.hidden_field :social_media, :value => "github" %>
-  <%= f.hidden_field :id, :value => @feed.id %>
-  <%= f.submit "Subscribe", :class => "btn btn-info" %>
+  <% if "#{git[:login]}" == Subscription.find_by(:feed_id => @idf)%>
+      "this exists"
+
+  <% else %>
+    <%= form_for @feed, url: create_github_feed_path, method: :post, :class => "col-xs-4 subscribe-button" do |f| %>
+    <%= f.hidden_field :handle, :value => "#{git[:login]}"%>
+    <%= f.hidden_field :social_media, :value => "github" %>
+    <%= f.hidden_field :id, :value => @feed.id %>
+    <%= f.submit "Subscribe", :class => "btn btn-info" %>
+    <% end %>
   <% end %>
 
 
