--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,6 +42,10 @@
           <p class="no-vimeos">Search for Vimeo users to grow your feed!</p>
       <% end %>
     </div>
+
+    <h2>Your Github Feed</h2>
+
+
 <% else%>
   <div></div>
 <% end %>
