add joke playlist

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,7 @@
 
 <body>
 
-<!-- Song Player http://playlist.me --><script type="text/javascript" src="http://playlist.me/w/script.js" data-config="{'skin':'skins/aquaOrange/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':true,'playlist':'http://www.youtube.com/playlist?list=PLanvKbpjZonTGPFfBhh1rLyh4uapA5cuI'}" ></script><noscript><a href="http://playlist.me/skins/">SCM player skins</a></noscript><!-- playlist.me script end -->
-
+<!-- Song Player http://playlist.me --><script type="text/javascript" src="http://playlist.me/w/script.js" data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':true,'shuffle':true,'repeat':1,'placement':'top','showplaylist':false,'playlist':'http://www.youtube.com/playlist?list=PLanvKbpjZonTGPFfBhh1rLyh4uapA5cuI'}" ></script><noscript><a href="http://playlist.me/songs/">player playlist</a></noscript><!-- playlist.me script end -->
 <% if logged_in? %>
 <div class= "login">
   <div class="home"><a href="/"> <%= image_tag "planet_logo.png", size:"200x120"
